--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="avatar_item">
 	  <img src="images/me.jpg" class="avatar"></img>
 	</div>	
-	<div class="row_item">I am currently a senior at Indiana University Bloomington pursuing a Bachelor's degree in statistics, with minors in mathematics and biology. When I'm not focusing on statistical work, I hate rock climbing, listening to music, and making the best darn cup of coffee you'll ever try.
+	<div class="row_item">I am currently a senior at Indiana University Bloomington pursuing a Bachelor's degree in statistics, with minors in mathematics and biology. When I'm not focusing on statistical work, I rock climbing, listening to music, and making the best darn cup of coffee you'll ever try.
 	</div>
       </div>    
     </div>
@@ -50,7 +50,7 @@
       <div class="item">
 	<h2>My Skills</h2>
 	<ul>
-	  <li><strong>Racket: </strong>I use Racket literally every day of my life. In school, I used it constantly for the majority of my classes. I primarily use Racket for exploratory data analysis, statistical model building using various regression techniques, and statistical diagnostics and inference. Similarly, through school I've learned dimensionality reduction techniques and other data mining algorithms.</li>
+	  <li><strong>R: </strong>I use R literally every day of my life. In school, I used it constantly for the majority of my classes. I primarily use R for exploratory data analysis, statistical model building using various regression techniques, and statistical diagnostics and inference. Similarly, through school I've learned dimensionality reduction techniques and other data mining algorithms.</li>
 	  <li><strong>Python: </strong> Last semester I was enrolled in a data visualization course, which is taught in Python. We were taught about vlarious data science libraries, such as pandas and numpy. We then visualizated our data using matplotlib, seaborn, and altair.</li>
 	  <li><strong>SQL: </strong>Used to learn the basics of running and querying databases. For example, I downloaded a  database that includes <a target="_blank" rel="noopener noreferrer" href="https://ergast.com/mrd/db/">data from every Formula 1 racing season</a>. I wrote queries that would export the database into several CSVs, and then visualized my findings in R. Blog post coming soon!</li>
 	</ul>
