--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 	  <a target="_blank" rel="noopener noreferrer" href="pages/tidytuesday.html">Tidy Tuesday Submissions</a>
 	</div>	
 	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/markov.html">Markov Chain Text Generation in Racket</a>
+	  <a target="_blank" rel="noopener noreferrer" href="pages/markov.html">Markov Chain Text Generation in R</a>
 	</div>	
 	<div class="work_item">
 	  <a target="_blank" rel="noopener noreferrer" href="pages/election.html">2016 Presidential Election Leaflet Map</a>
 	</div>	
 	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/guide.html">Beginner's Guide to Getting Started in Racket</a>
+	  <a target="_blank" rel="noopener noreferrer" href="pages/guide.html">Beginner's Guide to Getting Started in R</a>
 	</div>
       </div>
     </div>
@@ -104,4 +104,4 @@
     });
   </script>
 
-</html>
+/html>
