--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <html>
   <head>
     <title>Joe Stoica</title>
     <meta charset="UTF-8">
@@ -31,7 +30,7 @@
 	<div class="avatar_item">
 	  <img src="images/me.jpg" class="avatar"></img>
 	</div>	
-	<div class="row_item">I am currently a senior at Indiana University Bloomington pursuing a Bachelor's degree in statistics, with minors in mathematics and biology. When I'm not focusing on statistical work, I rock climbing, listening to music, and making the best darn cup of coffee you'll ever try.
+	<div class="row_item">I am currently a senior in my last semester at Indiana University Bloomington pursuing a Bachelor's degree in statistics, with minors in mathematics and biology. Hopefully, I will be furthering my statistics education this fall in graduate school. Through my analysis, I strive to understand the stories hidden in the data and present my findings in an objective and accurate manner.  When I'm not focusing on statistical work, I love rock climbing, listening to music, and making the best darn cup of coffee you'll ever try.
 	</div>
       </div>    
     </div>
@@ -41,10 +40,10 @@
       <div class="item">
 	<h2> My Experience </h2>
 	<ul>
-	  <li>Last summer, I had the opportunity to be the Finance and Operations intern at <a target="_blank" rel="noopener noreferrer" href="https://www.uplandbeer.com/">Upland Brewing Company</a>.There I focused on production margins throughout the supply chain, and wrote a comprehensive summarizing my findings report using RMarkdown. </li>
+	  <li>Last summer, I was the Finance and Operations intern at <a target="_blank" rel="noopener noreferrer" href="https://www.uplandbeer.com/">Upland Brewing Company</a>.There I focused on production margins throughout the supply chain, and wrote a comprehensive report summarizing my findings report using RMarkdown. </li>
 	  <li>This spring I've had the opportunity to be a research assistant in the <a target="_blank" rel="noopener noreferrer" href="http://www.indiana.edu/~cogdev/">Cognitive Development Lab</a> at Indiana University. I will be aiding in the process of data cleaning, helped with general statistical questions, and I'll soon be choosing a semester long project. More to come!</li>
-	  <li>Former undergraduate research assistant in the <a target="_blank" rel="noopener noreferrer" href="https://biology.indiana.edu/research/research-strengths/behavior/rosvall-lab.html">Rosvall Research Lab</a>. I helped assist with data collection on tree swallows, as well as maintain the RFID readers at our field sites.</li>
-	  <li>Undergraduate Teaching Instructor for <a target="_blank" rel ="noopener noreferrer" href="https://registrar.indiana.edu/browser/soc4182/BIOL/BIOL-L111.shtml">BIOL-L 111:</a> Foundations of Biology: Diversity, Evolution, and Ecology. This is my second semester being a UTA, and I really enjoy gaining experience teaching fellow students.</li>
+	  <li>I am a former undergraduate research assistant in the <a target="_blank" rel="noopener noreferrer" href="https://biology.indiana.edu/research/research-strengths/behavior/rosvall-lab.html">Rosvall Research Lab</a>. I helped assist with data collection on tree swallows, as well as maintain the RFID readers at our field sites.</li>
+	  <li>Undergraduate Teaching Instructor for <a target="_blank" rel ="noopener noreferrer" href="https://registrar.indiana.edu/browser/soc4182/BIOL/BIOL-L111.shtml">BIOL-L 111:</a> Foundations of Biology: Diversity, Evolution, and Ecology, . This is my second semester being a UTA, and I really enjoy gaining experience teaching fellow students.</li>
 	</ul>
       </div>      
       <div class="item">
@@ -53,14 +52,17 @@
 	  <li><strong>R: </strong>I use R literally every day of my life. In school, I used it constantly for the majority of my classes. I primarily use R for exploratory data analysis, statistical model building using various regression techniques, and statistical diagnostics and inference. Similarly, through school I've learned dimensionality reduction techniques and other data mining algorithms.</li>
 	  <li><strong>Python: </strong> Last semester I was enrolled in a data visualization course, which is taught in Python. We were taught about vlarious data science libraries, such as pandas and numpy. We then visualizated our data using matplotlib, seaborn, and altair.</li>
 	  <li><strong>SQL: </strong>Used to learn the basics of running and querying databases. For example, I downloaded a  database that includes <a target="_blank" rel="noopener noreferrer" href="https://ergast.com/mrd/db/">data from every Formula 1 racing season</a>. I wrote queries that would export the database into several CSVs, and then visualized my findings in R. Blog post coming soon!</li>
+	  <li><strong>Coffee Making: </strong> I am a coffee FIEND! I usually brew a cup every morning using either my <a target="_blank" rel="noopener norefferer" href = "https://aeropressinc.com/"> AeroPress </a> or a couple cups using the <a target = "_blank" rel="noopener norefferer" href="https://www.hario.jp/sp_v60series_m.html"> Hario V60 Pourover.</a> If you want to up your daily coffee game, I highly recommend upgrading! 
 	</ul>
       </div>
     </div>
     
     <!-- Work -->
     <div class="bio">
-      <div><h2>My Work</h2></div>    
-      <div class="work">	
+      <div><h2>My Work</h2></div>
+      
+      <!-- First row -->
+      <div class="work">
 	<div class="work_item">
 	  <a target="_blank" rel="noopener noreferrer" href="pages/tidytuesday.html">Tidy Tuesday Submissions</a>
 	</div>	
@@ -74,22 +76,55 @@
 	  <a target="_blank" rel="noopener noreferrer" href="pages/guide.html">Beginner's Guide to Getting Started in R</a>
 	</div>
       </div>
-    </div>
 
-    <div class="footer">
-      <div>
-	<a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/joe-stoica/" target="blank"><i class="fa fa-linkedin fa-3x"></i></a>
+      <!-- Second row -->
+      <div class="work">
+	<div class="work_item">
+	  <a target="_blank" rel="noopener noreferrer" href="pages/538.html">538 Viz Remakes</a>
+	</div>	
+	<div class="work_item">
+	  <a target="_blank" rel="noopener noreferrer" href="pages/csgo.html">Counter-Strike: Global Offensive Exploratory Visual Analysis</a>
+	</div>	
+	<div class="work_item">
+	  <a target="_blank" rel="noopener noreferrer" href="pages/house.html">Visualizing Gender Proportions in the U.S. House of Representatives</a>
+	</div>	
+	<div class="work_item">
+	  <a target="_blank" rel="noopener noreferrer" href="pages/askreddit.html">Analyzing a Year of /r/Askreddit Posts</a>
+	</div>
       </div>
-      <div>
-	<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Joe_Stoica" target="blank"><i class="fa fa-twitter fa-3x"></i></a>
+
+	<!-- Third row -->
+	<div class="work">
+	  <div class="work_item">
+	    <a target="_blank" rel="noopener noreferrer" href="pages/538.html">Tour de France Stage Wins</a>
+	  </div>	
+	  <div class="work_item">
+	    <a target="_blank" rel="noopener noreferrer" href="pages/csgo.html">History of the Supreme Court Justices</a>
+	  </div>	
+	  <div class="work_item">
+	    <a target="_blank" rel="noopener noreferrer" href="pages/supreme_court.html">Formula 1 Visualizations</a>
+	  </div>	
+	  <div class="work_item">
+	    <a target="_blank" rel="noopener noreferrer" href="pages/askreddit.html">Making Fractals in R</a>
+	  </div>
+	  
+	</div>
       </div>
-      <div>
-	<a target="_blank" rel="noopener noreferrer" href="https://github.com/joestoica" target="blank"><i class="fa fa-github fa-3x"></i></a>
+
+      <div class="footer">
+	<div>
+	  <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/joe-stoica/" target="blank"><i class="fa fa-linkedin fa-3x"></i></a>
+	</div>
+	<div>
+	  <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Joe_Stoica" target="blank"><i class="fa fa-twitter fa-3x"></i></a>
+	</div>
+	<div>
+	  <a target="_blank" rel="noopener noreferrer" href="https://github.com/joestoica" target="blank"><i class="fa fa-github fa-3x"></i></a>
+	</div>
+	<div>
+	  <a target="_blank" rel="noopener noreferrer" href="mailto:joe.stoica@gmail.com" target="blank"><i class="fa fa-envelope fa-3x"></i></a>
+	</div>
       </div>
-      <div>
-	<a target="_blank" rel="noopener noreferrer" href="mailto:joe.stoica@gmail.com" target="blank"><i class="fa fa-envelope fa-3x"></i></a>
-      </div>
-    </div>
 
   </body>
   <script>
@@ -104,4 +139,4 @@
     });
   </script>
 
-/html>
+  <rg/html>
