added some changes to new pages that are still in progress

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 	  <a target="_blank" rel="noopener noreferrer" href="pages/538.html">538 Viz Remakes</a>
 	</div>	
 	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/csgo.html">Counter-Strike: Global Offensive Exploratory Visual Analysis</a>
+	  <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">Counter-Strike: Global Offensive Exploratory Visual Analysis</a>
 	</div>	
 	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/house.html">Visualizing Gender Proportions in the U.S. House of Representatives</a>
+	  <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">Visualizing Gender Proportions in the U.S. House of Representatives</a>
 	</div>	
 	<div class="work_item">
 	  <a target="_blank" rel="noopener noreferrer" href="pages/askreddit.html">Analyzing a Year of /r/Askreddit Posts</a>
@@ -96,16 +96,16 @@
 	<!-- Third row -->
 	<div class="work">
 	  <div class="work_item">
-	    <a target="_blank" rel="noopener noreferrer" href="pages/538.html">Tour de France Stage Wins</a>
+	    <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">Tour de France Stage Wins</a>
 	  </div>	
 	  <div class="work_item">
-	    <a target="_blank" rel="noopener noreferrer" href="pages/csgo.html">History of the Supreme Court Justices</a>
+	    <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">History of the Supreme Court Justices</a>
 	  </div>	
 	  <div class="work_item">
-	    <a target="_blank" rel="noopener noreferrer" href="pages/supreme_court.html">Formula 1 Visualizations</a>
+	    <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">Formula 1 Visualizations</a>
 	  </div>	
 	  <div class="work_item">
-	    <a target="_blank" rel="noopener noreferrer" href="pages/askreddit.html">Making Fractals in R</a>
+	    <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">Making Fractals in R</a>
 	  </div>
 	  
 	</div>
