Changes to landing page

--- a/pages/stoic.html
+++ b/pages/stoic.html
@@ -10,15 +10,12 @@
   <body>
 
 
-    
     <!-- Header -->
     <div class="pages_header">
       <div class="header_item">
-	<h1>Title</h1>
-	<h3 style="justify-content: flex-end;">Date</h3>
+	<h1>Stoic: My Personal R Package</h1>
       </div>
     </div>
-
 
     <div class="col space">
       <div class="title">
