--- a/index.html
+++ b/index.html
@@ -40,19 +40,28 @@
       <div class="item">
 	<h2> My Experience </h2>
 	<ul>
+	  <li> This summer, I will be a Media Analytics Intern at <a target="_blank" rel="noopener noreferrer" href="https://us.mullenlowe.com/"<a> MullenLowe</a>. I'm super excited for this opportunity!
+								     </li>
+	  
 	  <li>Last summer, I was the Finance and Operations intern at <a target="_blank" rel="noopener noreferrer" href="https://www.uplandbeer.com/">Upland Brewing Company</a>.There I focused on production margins throughout the supply chain, and wrote a comprehensive report summarizing my findings report using RMarkdown. </li>
-	  <li>This spring I've had the opportunity to be a research assistant in the <a target="_blank" rel="noopener noreferrer" href="http://www.indiana.edu/~cogdev/">Cognitive Development Lab</a> at Indiana University. I will be aiding in the process of data cleaning, helped with general statistical questions, and I'll soon be choosing a semester long project. More to come!</li>
-	  <li>I am a former undergraduate research assistant in the <a target="_blank" rel="noopener noreferrer" href="https://biology.indiana.edu/research/research-strengths/behavior/rosvall-lab.html">Rosvall Research Lab</a>. I helped assist with data collection on tree swallows, as well as maintain the RFID readers at our field sites.</li>
-	  <li>Undergraduate Teaching Instructor for <a target="_blank" rel ="noopener noreferrer" href="https://registrar.indiana.edu/browser/soc4182/BIOL/BIOL-L111.shtml">BIOL-L 111:</a> Foundations of Biology: Diversity, Evolution, and Ecology, . This is my second semester being a UTA, and I really enjoy gaining experience teaching fellow students.</li>
+	  
+	  <li>This spring I've been a research assistant in the <a target="_blank" rel="noopener noreferrer" href="http://www.indiana.edu/~cogdev/">Cognitive Development Lab</a> at Indiana University. I've been working on a personal analysis project using our logitudinal data to explore how children gain knowledge using mathematical concepts.</li>
+
+	  <li>Undergraduate Teaching Instructor for <a target="_blank" rel ="noopener noreferrer" href="https://registrar.indiana.edu/browser/soc4182/BIOL/BIOL-L111.shtml">BIOL-L 111:</a> Foundations of Biology: Diversity, Evolution, and Ecology, . This is my second semester being a UTA, and I really enjoy the experience of teaching fellow students essential biology concepts.</li>
+	  
+	  <li>I am a former undergraduate research assistant in the <a target="_blank" rel="noopener noreferrer" href="https://biology.indiana.edu/research/research-strengths/behavior/rosvall-lab.html">Rosvall Research Lab</a>. I helped assist with data collection on tree swallows nesting behavior, as well as maintain the RFID readers at the field sites.</li>
+	  
+	  
 	</ul>
       </div>      
       <div class="item">
 	<h2>My Skills</h2>
 	<ul>
-	  <li><strong>R: </strong>I use R literally every day of my life. In school, I used it constantly for the majority of my classes. I primarily use R for exploratory data analysis, statistical model building using various regression techniques, and statistical diagnostics and inference. Similarly, through school I've learned dimensionality reduction techniques and other data mining algorithms.</li>
-	  <li><strong>Python: </strong> Last semester I was enrolled in a data visualization course, which is taught in Python. We were taught about vlarious data science libraries, such as pandas and numpy. We then visualizated our data using matplotlib, seaborn, and altair.</li>
-	  <li><strong>SQL: </strong>Used to learn the basics of running and querying databases. For example, I downloaded a  database that includes <a target="_blank" rel="noopener noreferrer" href="https://ergast.com/mrd/db/">data from every Formula 1 racing season</a>. I wrote queries that would export the database into several CSVs, and then visualized my findings in R. Blog post coming soon!</li>
-	  <li><strong>Coffee Making: </strong> I am a coffee FIEND! I usually brew a cup every morning using either my <a target="_blank" rel="noopener norefferer" href = "https://aeropressinc.com/"> AeroPress </a> or a couple cups using the <a target = "_blank" rel="noopener norefferer" href="https://www.hario.jp/sp_v60series_m.html"> Hario V60 Pourover.</a> If you want to up your daily coffee game, I highly recommend upgrading! 
+	  <li><strong>R: </strong>I use R constantly in my day-to-day life. In school, I used it for the majority of my classwork, whether it's rigorous statistical analysis or exploratory data analysis with an emphasis on visualization. I primarily use R for EDA, statistical model building using various regression techniques, and statistical diagnostics and inference. Similarly, through my computer science courses I've learned dimensionality reduction techniques and other data mining and classification algorithms.</li>
+	  
+	  <li><strong>Python: </strong> Last semester I was enrolled in a data visualization course, which was taught in Python. We were taught about various data science libraries, such as pandas and numpy. We then visualizated our data using matplotlib, seaborn, and altair.</li>
+	  <li><strong>SQL: </strong> I learned the basics of running and querying databases. For example, I downloaded a  database that includes <a target="_blank" rel="noopener noreferrer" href="https://ergast.com/mrd/db/">data from every Formula 1 racing season</a>. I wrote queries that would export the database into several CSVs, and then visualized my findings in R. Blog post coming soon!</li>
+	  
 	</ul>
       </div>
     </div>
@@ -64,67 +73,78 @@
       <!-- First row -->
       <div class="work">
 	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/tidytuesday.html">Tidy Tuesday Submissions</a>
-	</div>	
-	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/markov.html">Markov Chain Text Generation in R</a>
-	</div>	
-	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/election.html">2016 Presidential Election Leaflet Map</a>
-	</div>	
-	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/guide.html">Beginner's Guide to Getting Started in R</a>
+	  
+	  <div>
+	    <a target="_blank" rel="noopener noreferrer" href="pages/viz.html">
+	      <div>
+		<img src="images/hourly_bar.png" class="list_image">
+	      </div>
+	       Data Visualization Library</a>
+	  </div>
 	</div>
-      </div>
-
-      <!-- Second row -->
-      <div class="work">
+	
 	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/538.html">538 Viz Remakes</a>
-	</div>	
-	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">Counter-Strike: Global Offensive Exploratory Visual Analysis</a>
-	</div>	
-	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">Visualizing Gender Proportions in the U.S. House of Representatives</a>
-	</div>	
-	<div class="work_item">
-	  <a target="_blank" rel="noopener noreferrer" href="pages/askreddit.html">Analyzing a Year of /r/Askreddit Posts</a>
+	  <div>
+	    <a target="_blank" rel="noopener noreferrer" href="pages/markov.html">
+	      <div>
+		<img src="images/hourly_bar.png" class="list_image">
+	      </div>
+	      Markov Chain Text Generation in R</a>
+	  </div>
 	</div>
-      </div>
 
-	<!-- Third row -->
-	<div class="work">
-	  <div class="work_item">
-	    <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">Tour de France Stage Wins</a>
-	  </div>	
-	  <div class="work_item">
-	    <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">History of the Supreme Court Justices</a>
-	  </div>	
-	  <div class="work_item">
-	    <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">Formula 1 Visualizations</a>
-	  </div>	
-	  <div class="work_item">
-	    <a target="_blank" rel="noopener noreferrer" href="pages/coming_soon.html">Making Fractals in R</a>
+	<div class="work_item">
+	 
+	  <div>
+	    <a target="_blank" rel="noopener noreferrer" href="pages/election.html">
+	      <div>
+		<img src="images/hourly_bar.png" class="list_image">
+	      </div>
+	      2016 Presidential Election Leaflet Map</a>
+	  </div>
+	</div>
+
+	<div class="work_item">
+	 
+	  <div>
+	    <a target="_blank" rel="noopener noreferrer" href="pages/askreddit.html">
+	      <div>
+		<img src="images/hourly_bar.png" class="list_image">
+	      </div>
+	      Analyzing a Year of Askreddit Posts</a>
+	  </div>	  
+	</div>
+	
+	<div class="work_item">
+	  <div>	  
+	    <a target="_blank" rel="noopener noreferrer" href="pages/stoic.html">
+	      <div>
+		<img src="images/hexsticker.svg" class="list_image">
+	      </div>
+	      Stoic: My Personal R Package</a>
 	  </div>
 	  
 	</div>
-      </div>
+	
+	
 
-      <div class="footer">
-	<div>
-	  <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/joe-stoica/" target="blank"><i class="fa fa-linkedin fa-3x"></i></a>
-	</div>
-	<div>
-	  <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Joe_Stoica" target="blank"><i class="fa fa-twitter fa-3x"></i></a>
-	</div>
-	<div>
-	  <a target="_blank" rel="noopener noreferrer" href="https://github.com/joestoica" target="blank"><i class="fa fa-github fa-3x"></i></a>
-	</div>
-	<div>
-	  <a target="_blank" rel="noopener noreferrer" href="mailto:joe.stoica@gmail.com" target="blank"><i class="fa fa-envelope fa-3x"></i></a>
-	</div>
       </div>
+    </div>
+
+    <div class="footer">
+      <div>
+	<a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/joe-stoica/" target="blank"><i class="fa fa-linkedin fa-3x"></i></a>
+      </div>
+      <div>
+	<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Joe_Stoica" target="blank"><i class="fa fa-twitter fa-3x"></i></a>
+      </div>
+      <div>
+	<a target="_blank" rel="noopener noreferrer" href="https://github.com/joestoica" target="blank"><i class="fa fa-github fa-3x"></i></a>
+      </div>
+      <div>
+	<a target="_blank" rel="noopener noreferrer" href="mailto:joe.stoica@gmail.com" target="blank"><i class="fa fa-envelope fa-3x"></i></a>
+      </div>
+    </div>
 
   </body>
   <script>
@@ -139,4 +159,4 @@
     });
   </script>
 
-  <rg/html>
+</html>
