--- a/pages/guide.html
+++ b/pages/guide.html
@@ -11,42 +11,41 @@
 
     
     <!-- Header -->
-    <div class="pages_header">
-      <div class="header_item">
-	<h1>Beginners Guide to Getting Started in R</h1>
-	<h3>(Still a Work in Progress)</h3>
+    <div class="header">
+      <h1>Beginners Guide to Getting Started in R</h1>
+      <div class="footer">
+	<a target="_blank" rel="noopener noreferrer" href="../index.html" target="blank"><i class="fa fa-home fa-lg"></i></a>
       </div>
     </div>
 
+    <div>
+      <h1>So, you want to Learn R?</h1>
+      <p>
+	I want to start this post with a disclaimer:
+	<strong>I DO NOT CLAIM TO BE AN R EXPERT!</strong> I'm just a student who wants to provide resources I wish I had when I started my R journey almost a year ago. If I had known about some of these things I know it would have made my life so much easier. And so, this is my humble attempt to compile those resources in one place for anyone to use as a reference!
+      </p>
 
-    <div class="col space">
-      <div class="title">
-    	<h1>So, you want to Learn R?</h1>
+      <p>
+	This page is going to be broken up into a few sections. The first section will be for people with little to no programming experience and places to learn the basics, and after that I'll have some more advanced resources. Finally I'll just have a random section that contains tips and tricks and other useful things.
+      </p>
+
+      <h3>But first, a quick pep talk</h3>
+      <p>
+	Programming is extremely frustrating, and learning programming is really hard. Programming causes you to fail, over, and over, and over. I guarantee you that you will soon spend an absurd amount of time trying to figure just why your code is not working, only to discover you forgot one simple step somewhere along the way. That being said, some of the greatest satisfaction in my life has come from overcoming these hardships and ending up with a product that I've created and that I am <i>extremely</i> proud of.
+      </p>
+      <p>
+	Don't give up on your pursuits. If you can't figure something out, take a break from it, and I guarantee nine out of ten times you'll figure out what you're doing wrong. However, for that one time where you just can't figure it out, you might have to put your pride away and seek help. Google it. Read the documentation. Create a post for your problem on Stack Overflow. There is nothing wrong with doing this, because you're still learning. I bet you that you will look up how to use gather() everytime you use it, and there's nothing wrong with that. <strong> You and everyone else who uses R is still learning R.</strong> Just keep practicing and never think you aren't good enough to solve a problem, cause I bet you that you are better than you think you are.
+      </p>
+
+      <article id="beginner">
+	<h2>For R Beginners</h2>
+
+	<h3>Downloading R and RStudio</h3>
 	<p>
-	  I want to start this post with a disclaimer:
-	  <strong>I DO NOT CLAIM TO BE AN R EXPERT!</strong> I'm just a student who wants to provide resources I wish I had when I started my R journey almost a year ago. If I had known about some of these things I know it would have made my life so much easier. And so, this is my humble attempt to compile those resources in one place for anyone to use as a reference!
+	  To start using R, download it <a target="_blank" rel="noopener noreferrer" href="https://cran.r-project.org/bin/windows/base/">here.</a> It's free! Once you've completed installation, I cannot emphasize enough how amazing <a target="_blank" rel="noopener noreferrer" href="https://www.rstudio.com/">RStudio</a> is. It is a free (with options to have a paid version, but it is pretty unecessary), open-source integrated development environment (IDE for short) that makes using R so much easier. RStudio is not required, but it will spice up your life in more ways than you could ever imagine. Now that you have RStudio installed, your actual journey can begin. <a target="_blank" rel="noopener noreferrer" href="../images/rstudio-ide.pdf">Here</a> is a cheatsheet to familiarize yourself with the IDE if you're completely overwhelmed, or <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=lVKMsaWju8w">here</a> is a video that can explain what you see!
 	</p>
+	<h2>Learning Resources</u></h2>
 
-	<p>
-	  This page is going to be broken up into a few sections. The first section will be for people with little to no programming experience and places to learn the basics, and after that I'll have some more advanced resources. Finally I'll just have a random section that contains tips and tricks and other useful things.
-	</p>
-
-	<h3>But first, a quick pep talk</h3>
-	<p>
-	  Programming is extremely frustrating, and learning programming is really hard. Programming causes you to fail, over, and over, and over. I guarantee you that you will soon spend an absurd amount of time trying to figure just why your code is not working, only to discover you forgot one simple step somewhere along the way. That being said, some of the greatest satisfaction in my life has come from overcoming these hardships and ending up with a product that I've created and that I am <i>extremely</i> proud of.
-	</p>
-	<p>
-	  Don't give up on your pursuits. If you can't figure something out, take a break from it, and I guarantee nine out of ten times you'll figure out what you're doing wrong. However, for that one time where you just can't figure it out, you might have to put your pride away and seek help. Google it. Read the documentation. Create a post for your problem on Stack Overflow. There is nothing wrong with doing this, because you're still learning. I bet you that you will look up how to use gather() everytime you use it, and there's nothing wrong with that. <strong> You and everyone else who uses R is still learning R.</strong> Just keep practicing and never think you aren't good enough to solve a problem, cause I bet you that you are better than you think you are.
-	</p>
-
-	<article id="beginner">
-	  <h2>For R Beginners</h2>
-
-	  <h3>Downloading R and RStudio</h3>
-	  <p>
-	    To start using R, download it <a target="_blank" rel="noopener noreferrer" href="https://cran.r-project.org/bin/windows/base/">here.</a> It's free! Once you've completed installation, I cannot emphasize enough how amazing <a target="_blank" rel="noopener noreferrer" href="https://www.rstudio.com/">RStudio</a> is. It is a free (with options to have a paid version, but it is pretty unecessary), open-source integrated development environment (IDE for short) that makes using R so much easier. RStudio is not required, but it will spice up your life in more ways than you could ever imagine. Now that you have RStudio installed, your actual journey can begin. <a target="_blank" rel="noopener noreferrer" href="../images/rstudio-ide.pdf">Here</a> is a cheatsheet to familiarize yourself with the IDE if you're completely overwhelmed, or <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=lVKMsaWju8w">here</a> is a video that can explain what you see!
-	  </p>
-	  <h2>Learning Resources</u></h2>
 <h3>Swirl</u></h3>
 <p>
   <a target="_blank" rel="noopener noreferrer" href="https://swirlstats.com">Swirl</a> is an interactive
@@ -140,7 +139,7 @@
   <code>
     > 1 - pnorm(2.32)
     [1] 0.01017044
-    </code>
+  </code>
 </p>
 
 <h4> Other Functions</h4>
