--- a/pages/538.html
+++ b/pages/538.html
@@ -10,9 +10,10 @@
   <body>
     
     <!-- Header -->
-    <div class="pages_header">
-      <div class="pages_header_item">
-	<h1>Remaking Visualizations from 538</h1>
+    <div class="header">
+      <h1>Remaking Visualizations from 538</h1>
+      <div class="footer">
+	<a target="_blank" rel="noopener noreferrer" href="../index.html" target="blank"><i class="fa fa-home fa-lg"></i></a>
       </div>
     </div>
 
@@ -37,21 +38,5 @@
 	  
       </div>
     </div>
-
-    <div class="footer">
-      <div>
-	<a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/joe-stoica/" target="blank"><i class="fa fa-linkedin fa-3x"></i></a>
-      </div>
-      <div>
-	<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Joe_Stoica" target="blank"><i class="fa fa-twitter fa-3x"></i></a>
-      </div>
-      <div>
-	<a target="_blank" rel="noopener noreferrer" href="https://github.com/joestoica" target="blank"><i class="fa fa-github fa-3x"></i></a>
-      </div>
-      <div>
-	<a target="_blank" rel="noopener noreferrer" href="mailto:joe.stoica@gmail.com" target="blank"><i class="fa fa-envelope fa-3x"></i></a>
-      </div>
-    </div>
-
   </body>
 </html>
