--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
       	<a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/joe-stoica/" target="blank"><i class="fa fa-linkedin fa-2x"></i></a>
 	<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Joe_Stoica" target="blank"><i class="fa fa-twitter fa-2x"></i></a>
 	<a target="_blank" rel="noopener noreferrer" href="https://github.com/joestoica" target="blank"><i class="fa fa-github fa-2x"></i></a>
-	<a target="_blank" rel="noopener noreferrer" href="mailto:joe.stoica@gmail.com" target="blank"><i class="fa fa-envelope fa-2x"></i></a>
+	<a target="_blank" rel="noopener noreferrer" href="mailto:contactjoestoica@gmail.com" target="blank"><i class="fa fa-envelope fa-2x"></i></a>
       </div>
       
       <div>
@@ -39,7 +39,7 @@
 	  <li><a target="_blank" rel="noopener noreferrer" href="pages/election.html">Interactive 2016 Presidential Election Map</a></li>
 	  <li><a target="_blank" rel="noopener noreferrer" href="pages/markov.html">Markov Chain Text Generation in R</a></li>
 	  <li><a target="_blank" rel="noopener noreferrer" href="pages/538.html">538 Data Viz Remake</a></li>
-	  <li><a target="_blank" rel="noopener noreferrer" href="pages/stoic.html">My personal R package stoic</a></li>
+	  <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/joestoica/stoic">My personal R package stoic</a></li>
 	  <li><a target="_blank" rel="noopener noreferrer" href="pages/guide.html">Beginner's Guide to Getting Started in R</a></li>
 	</ul>
       </div>
