minor changes, fixed tableau

--- a/pages/pca.html
+++ b/pages/pca.html
@@ -33,21 +33,21 @@
 	<p>
 	  I then did two separate exploratory analyses. The first was to just show the PCA biplot for each year to see if there actually is growing divide. That can be seen in the first Tableau dashboard below. The second analysis takes a selected congress member that, and compares their first principal component to the average principal component of both parties. This calculated difference can be thought of as a dissimilarity score, where a lower score indicates similar voting behavior to that party, and dissimilarity grows as the score increases. 
 	</p>
-	<h1>Vote Data PCA</h1>
+
+<h1>Vote Data PCA</h1>
 
 	<p>
-	  Here is the PCA visualization for every year of voting data. Since we're trying to see if this voting data shows any indication of division in our political system, we would expect to see the two colored groups drift further apart over time. No concrete conclusions can be necessarily drawn since this is primarily an exploratory analysis, but it does sort of appear that the two parties grew a little further apart, though there are definitely some exceptions.
+	  If you would like to see and interact with the Tableau Dashboard, <a href="https://public.tableau.com/profile/joe.stoica#!/vizhome/Voting_15693263763670/VotingDissimilarity" target="_blank" rel="noopener noreferrer">follow this link here</a>. The first dashboard is the PCA visualization for every year of voting data. Since we're trying to see if this voting data shows any indication of division in our political system, we would expect to see the two colored groups drift further apart over time. No concrete conclusions can be necessarily drawn since this is primarily an exploratory analysis, but it does sort of appear that the two parties grew a little further apart, though there are definitely some exceptions. 
 	</p>
 	
-	<script type='text/javascript' src='https://prod-useast-a.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 800px; height: 827px;'><object class='tableauViz' width='800' height='827' style='display:none;'><param name='host_url' value='https%3A%2F%2Fprod-useast-a.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;joestoica' /><param name='name' value='PCAandDissimilarity&#47;PCAdashboard' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='filter' value='iframeSizedToWindow=true' /></object></div>
+
 
 	<h1>Dissimilarity Scores EDA</h1>
 
 	<p>
-	  This Tableau dashboard shows how every congress member in the dataset voted compared to the two parties. Once again, the closer the value is to 0, the more similar they voted to that party for that year, so a larger bar indicates a larger voting discrepancy.
+	  If you navigate to the other dashboard, it shows how every congress member in the dataset voted compared to the two parties. Once again, the closer the value is to 0, the more similar they voted to that party for that year, so a larger bar indicates a larger voting discrepancy.
 	</p>
 
-	<script type='text/javascript' src='https://prod-useast-a.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 800px; height: 827px;'><object class='tableauViz' width='800' height='827' style='display:none;'><param name='host_url' value='https%3A%2F%2Fprod-useast-a.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;joestoica' /><param name='name' value='PCAandDissimilarity&#47;VotingDissimilarity' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='filter' value='iframeSizedToWindow=true' /></object></div>
 	
       </div>
       
