this github stuff is hard wow

--- a/pages/election.html
+++ b/pages/election.html
@@ -40,7 +40,7 @@
 	<p>
 	  <h2>Examination Through Mapping</h2>
 	<p>
-	  <iframe seamless src="./map1.html" width="100%" height="500"></iframe>
+	  <iframe seamless src="./map.html" width="100%" height="500"></iframe>
 
 	<p>
 	  There are a few different ways to explore the map. Clicking on an individual
