--- a/home.html
+++ b/home.html
@@ -36,6 +36,7 @@
 	<h1>Work</h1>
 	<ul>
 	  <li><a target="_blank" rel="noopener noreferrer" href="pages/pca.html">Visualizing the Growing Partisan Divide using Principle Compnent Analysis</a></li>
+	  <li><a target="_blank" rel="noopener noreferrer" href="pages/rmp.html">Comparing RateMyProfessors Data and IU Grading Data</a></li>
 	  <li><a target="_blank" rel="noopener noreferrer" href="pages/election.html">Interactive 2016 Presidential Election Map</a></li>
 	  <li><a target="_blank" rel="noopener noreferrer" href="pages/markov.html">Markov Chain Text Generation in R</a></li>
 	  <li><a target="_blank" rel="noopener noreferrer" href="pages/538.html">538 Data Viz Remake</a></li>
