--- a/pages/election.html
+++ b/pages/election.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Joe Stoica</title>
+    <title>2016 Election</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/theme.css">
@@ -43,12 +43,12 @@
 	  <iframe seamless src="./map.html" width="100%" height="500"></iframe>
 
 	<p>
-	  There are a few different ways to explore the map. Clicking on an individual
+	  There are twp different ways to explore the map. Clicking on an individual
 	  county reveals relevant election data about that specific county,
 	  such as the county name, the winning candidate, the number of votes
 	  each candidate received, and the voting margin between the two. The
-	  radio buttons in the bottom left allow the map to be shaded in four
-	  different ways: by county winner,  by diverging vote percent margin, by Trump's overall margin, and by Clinton's overall margin. The darker the shade of the county, the larger the percent margin is for that candidate. Clinton is mapped to blue counties, and Trump is mapped to red.
+	  radio buttons in the bottom left allow the map to be shaded in tw0
+	  different ways: by county winner, and by diverging vote percent margin. The darker the shade of the county, the larger the percent margin is for that candidate. Clinton is mapped to blue counties, and Trump is mapped to red. It is extremely important to note that the areas on the first map do not represent the population of those counties, simply who won which county (Even though there are more red counties than blue, this does not equate to the proportion of the population. Clinton still won the popular vote).
 	</p>
 
 	<p>
