--- a/home.html
+++ b/home.html
@@ -35,15 +35,15 @@
       <div>
 	<h1>Work</h1>
 	<ul>
-	  <li><a target="_blank" rel="noopener noreferrer" href="pages/pca.html">Visualizing the Growing Partisan Divide using Principle Compnent Analysis</a></li>
-	  <li><a target="_blank" rel="noopener noreferrer" href="pages/rmp.html">Comparing RateMyProfessors Data and IU Grading Data</a></li>
-	  <li><a target="_blank" rel="noopener noreferrer" href="pages/election.html">Interactive 2016 Presidential Election Map</a></li>
-	  <li><a target="_blank" rel="noopener noreferrer" href="pages/markov.html">Markov Chain Text Generation in R</a></li>
-	  <li><a target="_blank" rel="noopener noreferrer" href="pages/538.html">538 Data Viz Remake</a></li>
-	  <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/joestoica/stoic">My personal R package stoic</a></li>
+	  <li>Oct 10, 2019 - <a target="_blank" rel="noopener noreferrer" href="pages/xkcd.html">Viewing xkcd comics in RStudio</a></li>
+	  <li>Sep 30, 2019 - <a target="_blank" rel="noopener noreferrer" href="pages/rmp.html">Comparing RateMyProfessors Data and IU Grading Data</a></li>
+	  <li>Sep 1, 2019 - <a target="_blank" rel="noopener noreferrer" href="pages/pca.html">Visualizing the Growing Partisan Divide using Principle Compnent Analysis</a></li>
+	  <li>Mar 8, 2019 - <a target="_blank" rel="noopener noreferrer" href="https://github.com/joestoica/stoic">My personal R package stoic</a></li>
+	  <li>Feb 19, 2019 - <a target="_blank" rel="noopener noreferrer" href="pages/markov.html">Markov Chain Text Generation in R</a></li>
+	  <li>Feb 17, 2019 - <a target="_blank" rel="noopener noreferrer" href="pages/538.html">538 Data Viz Remake</a></li>
+	  <li>Sep 19, 2018 - <a target="_blank" rel="noopener noreferrer" href="pages/election.html">Interactive 2016 Presidential Election Map</a></li>
 	</ul>
       </div>
-      
     </div>
   </body>
   
