Changed startup for links and edited background color of home

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -27,8 +27,8 @@
 
       <main role="main" class="inner cover">
         <div id="time">
-			<a id="h">12</a> :
-			<a id="m">00</a>
+			<a target="_blank" rel="noopener noreferrer" id="h">12</a> :
+			<a target="_blank" rel="noopener noreferrer" id="m">00</a>
 		</div>
 		
 		<div class="quicklinks">
@@ -36,33 +36,33 @@
         <div class="daily col-lg-3 col-md-3 col-6">
 			<h3>S C H O O L</h3>
 			<div class="divider"></div>
-			<a href="https://one.iu.edu/"><div class="link">one</div></a><br><br>
-            <a href="https://iu.instructure.com/"><div class="link">canvas</div></a><br><br>
-            <a href="https://apps.iu.edu/kpme-prd/Clock.do"><div class="link">kuali</div></a><br><br>
+			<a target="_blank" rel="noopener noreferrer" href="https://one.iu.edu/"><div class="link">one</div></a><br><br>
+            <a target="_blank" rel="noopener noreferrer" href="https://iu.instructure.com/"><div class="link">canvas</div></a><br><br>
+            <a target="_blank" rel="noopener noreferrer" href="https://apps.iu.edu/kpme-prd/Clock.do"><div class="link">kuali</div></a><br><br>
 		</div>
 		
 		<div class="creative col-lg-3 col-md-3 col-6">
 			<h3>W O R K</h3>
 			<div class="divider"></div>
-            <a href="https://calendar.google.com/calendar/r"><div class="link">calendar</div></a><br><br>
-            <a href="https://www.notion.so/stoica/"><div class="link">notion</div></a><br><br>
-            <a href="https://github.com/joestoica/"><div class="link">github</div></a><br><br>
+            <a target="_blank" rel="noopener noreferrer" href="https://calendar.google.com/calendar/r"><div class="link">calendar</div></a><br><br>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.notion.so/stoica/"><div class="link">notion</div></a><br><br>
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/joestoica/"><div class="link">github</div></a><br><br>
 		</div>
 		
 		<div class="streaming col-lg-3 col-md-3 col-6">
 			<h3>F I N A N C E</h3>
 			<div class="divider"></div>
-			<a href="https://app.youneedabudget.com/"><div class="link">ynab</div></a><br><br>
-            <a href="https://www.discover.com/"><div class="link">discover</div></a><br><br>
-            <a href="https://www.chase.com/"><div class="link">chase</div></a><br><br>
+			<a target="_blank" rel="noopener noreferrer" href="https://app.youneedabudget.com/"><div class="link">ynab</div></a><br><br>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.discover.com/"><div class="link">discover</div></a><br><br>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.chase.com/"><div class="link">chase</div></a><br><br>
 		</div>
 		
 		<div class="streaming col-lg-3 col-md-3 col-6">
 			<h3>F U N</h3>
 			<div class="divider"></div>
-			<a href="https://www.reddit.com/"><div class="link">reddit</div></a><br><br>
-            <a href="https://www.twitter.com/"><div class="link">twitter</div></a><br><br>
-            <a href="https://www.xkcd.com/"><div class="link">xkcd</div></a><br><br>
+			<a target="_blank" rel="noopener noreferrer" href="https://www.reddit.com/"><div class="link">reddit</div></a><br><br>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.twitter.com/"><div class="link">twitter</div></a><br><br>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.xkcd.com/"><div class="link">xkcd</div></a><br><br>
 		</div>
 
 		
