--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Joe Stoica</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="images/chart.svg" type="image/svg+xml" />
         <link rel="stylesheet" type="text/css" href="css/theme.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
